# AF-base-library

./: CMakeLists.txt  baseAF.qbs  doxygen_script
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_018f612a7b8e0847d7ad76708865cc38.html  dir_018f612a7b8e0847d7ad76708865cc38.js  dir_0ae50393f85500dcaf4902d633bcb6bc.html  dir_0ae50393f85500dcaf4902d633bcb6bc.js  dir_0d5dae74873b697403ab22838867a35b.html  dir_0d5dae74873b697403ab22838867a35b.js  dir_19a33e7c67026d22941eb9ceee7bee84.html  dir_19a33e7c67026d22941eb9ceee7bee84.js  dir_2309d3be9fd77a62439d0dce0f5800ec.html  dir_2309d3be9fd77a62439d0dce0f5800ec.js  dir_2eebdc9c3a30592ee98ec9da2b9ec3a2.html  dir_2eebdc9c3a30592ee98ec9da2b9ec3a2.js  dir_30f200bd14aba28a7fc4124ffda5e2a0.html  dir_30f200bd14aba28a7fc4124ffda5e2a0.js  dir_3171a9a8b02991c5e8b7e9b72c7638e2.html  dir_3171a9a8b02991c5e8b7e9b72c7638e2.js  dir_47d0b68303c9ca2af6c3a4277d67f034.html  dir_47d0b68303c9ca2af6c3a4277d67f034.js  dir_48357a3f35d264923444c6a4fbd9313a.html  dir_48357a3f35d264923444c6a4fbd9313a.js  dir_8d319cf711df50dd5f28cb2e80f67e1e.html  dir_8d319cf711df50dd5f28cb2e80f67e1e.js  dir_90d767ab914b696d3f86f13919be2a39.html  dir_90d767ab914b696d3f86f13919be2a39.js  dir_c34f2437df7bb201d68df3b7932acd78.html  dir_c34f2437df7bb201d68df3b7932acd78.js  dir_cb97e30a0c569ff606f7b0012e7f3f3c.html  dir_cb97e30a0c569ff606f7b0012e7f3f3c.js  dir_e3281c08f2ec0a0baf11e172673ae76f.html  dir_e3281c08f2ec0a0baf11e172673ae76f.js  dir_ed291339099050bab0b71d76f6e625b2.html  dir_ed291339099050bab0b71d76f6e625b2.js  dir_f6a12d8d27c8e8d6ec9fa28173009d78.html  dir_f6a12d8d27c8e8d6ec9fa28173009d78.js  dir_fc7041e1e73c56b5f60ff792e1285696.html  dir_fc7041e1e73c56b5f60ff792e1285696.js  files.html  (+74 more)
doc/latex/: annotated.tex  dir_018f612a7b8e0847d7ad76708865cc38.tex  dir_0ae50393f85500dcaf4902d633bcb6bc.tex  dir_0d5dae74873b697403ab22838867a35b.tex  dir_19a33e7c67026d22941eb9ceee7bee84.tex  dir_2309d3be9fd77a62439d0dce0f5800ec.tex  dir_2eebdc9c3a30592ee98ec9da2b9ec3a2.tex  dir_30f200bd14aba28a7fc4124ffda5e2a0.tex  (+19 more)
lib_accountAF/: CMakeLists.txt
lib_accountAF/include/AFaccount/: AfAccount  AfAccountApi  AfAccountGroup  AfAccountInfo  AfAccountStorage
lib_accountAF/include/lib_accountAF/: account.h  accountAPI.h  accountGroup.h  accountInfo.h  accountStorage.h
lib_accountAF/src/: account.cpp  accountAPI.cpp  accountGroup.cpp  accountInfo.cpp  accountStorage.cpp
lib_baseAF/: CMakeLists.txt  lib_baseAF.qbs
lib_baseAF/account/: afAccount.cpp  afAccountAPI.cpp  afAccountGroup.cpp  afAccountInfo.cpp  afAccountStorage.cpp
lib_baseAF/base/: afAPI.cpp  afEnum.cpp  afFunction.cpp  afFunction_st.cpp  afIdAccount.cpp  afIdGlobalBit.cpp  afIdHistory.cpp  afIdInfo.cpp  afIdObject.cpp  afIdObjectBit.cpp  afIdObjectTemplate.cpp  afIdOperate.cpp  afSystem.cpp  enumAF.cpp  function.cpp  id.cpp  system.cpp
lib_baseAF/control/: applicationAF.cpp  dir.cpp  origin.cpp  setting.cpp
lib_baseAF/include/: AFaccountLib  AFbaseLib  afAccountLib.h  afBaseLib.h  afLib.h  applicationAF.h  dir.h  enum.h  file.h  function.h  libHandler.h  libSingle.h  origin.h  plugin.h  pluginHandler.h  pluginMetadata.h  pluginSingle.h  setting.h  system.h  user.h  userHandler.h  version.h
lib_baseAF/include/AFaccount/: AfAccount  AfAccountApi  AfAccountGroup  AfAccountInfo  AfAccountStorage
lib_baseAF/include/AFbase/: AfAPI  AfDir  AfEnum  AfFile  AfFunctionSt  AfId  AfIdAccount  AfIdBit  AfIdGlobalBit  AfIdHistory  AfIdObject  AfIdObjectBit  AfIdOperate  AfPreference  AfServerSettings  AfSetting  AfStorage  AfSystem  AfTransferOperateList
lib_baseAF/include/lib_baseAF/: afAPI.h  afAccount.h  afAccountAPI.h  afAccountGroup.h  afAccountInfo.h  afAccountStorage.h  afApplication.h  afCrypt.h  afDir.h  afEnum.h  afFile.h  afFunction.h  afFunction_st.h  afId.h  afIdAccount.h  afIdBit.h  afIdGlobalBit.h  afIdHistory.h  afIdInfo.h  afIdObject.h  afIdObjectBit.h  afIdObjectTemplate.h  afIdOperate.h  afLibHandler.h  afLibSingle.h  afLinkedList.h  afPlugin.h  afPluginHandler.h  afPluginMetadata.h  afPluginSingle.h  afServerSettings.h  afStorage.h  afSystem.h  afTransferOperateList.h  afVersion.h  dir.h  enumAF.h  function.h  id.h  libHandler.h  (+8 more)
lib_baseAF/loaded/: libSingle.cpp  plugin.cpp  pluginHandler.cpp  pluginMetadata.cpp  pluginSingle.cpp  version.cpp
lib_baseAF/loader/: afLibHandler.cpp  afLibSingle.cpp  afPlugin.cpp  afPluginMetadata.cpp  afVersion.cpp  plugin.cpp  pluginHandler.cpp  pluginSingle.cpp
lib_baseAF/test/: afTestClass.cpp  afTestClass.h  test.cpp
lib_baseAF/tool/: afCrypt.cpp  afDir.cpp  afDir2.cpp  afFile.cpp  afServerSettings.cpp  afSetting.cpp  afStorage.cpp  afTransferOperateList.cpp  dir.cpp  enum.cpp  file.cpp  origin.cpp  setting.cpp  storage.cpp
lib_baseAF/user/: user.cpp  userHandler.cpp
lib_quickAF/: CMakeLists.txt  lib_quickAF.qbs  qm_rc.qrc
lib_quickAF/Component/: BusyIndicator.qml  Content.qml  Plugin.qml
lib_quickAF/Enum/: ColorItem.qml  Colors.qml
lib_quickAF/Item/: Button.qml  LinkText.qml  Position.qml  Separate.qml  TextInput.qml
lib_quickAF/include/: AFquickLib  guiApplicationAF.h  pluginGui.h  pluginGuiHandler.h
lib_quickAF/include/AFquick/: AfGuiApplication  AfGuiPlugin  AfGuiSize  AfMenuModel
lib_quickAF/include/lib_quickAF/: guiApplication.h  guiPlugin.h  guiSize.h  menuModel.h  pluginGui.h  pluginGuiHandler.h  quickAFlib.h
lib_quickAF/rc/: af_quick_rc.qrc
lib_quickAF/rc/Base/: App.qml  Menu.qml  Plugin.qml
lib_quickAF/rc/Component/: Header.qml  Mirror.qml  TextInput.qml
lib_quickAF/rc/Enum/: MQEnum.qml
lib_quickAF/rc/Item/: AFbutton.qml  AFtext.qml  BaseApp.qml  CheckBox.qml  Combobox.qml  DigitTextInput.qml  Slider.qml  SpinBox.qml  TabButton.qml
lib_quickAF/rc/Object/: TextObject.qml  UrlButtonObject.qml
lib_quickAF/src/: guiApplication.cpp  guiPlugin.cpp  guiSize.cpp  menuModel.cpp  pluginGui.cpp  pluginGuiHandler.cpp  quickAFlib.cpp
serverAF/: CMakeLists.txt  accountServer.cpp  accountServer.h  dataServer.cpp  dataServer.h  main.cpp  server.cpp
server_accountAF/: CMakeLists.txt  httpServer.cpp  httpServer.h  main.cpp
(+818 files in other folders)
